--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
 
     <EditText
         android:id="@+id/tfName"
-        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="370dp"
         android:layout_height="60dp"
         android:layout_marginTop="90dp"
@@ -70,7 +70,7 @@
         android:ems="10"
         android:fontFamily="@font/josefin_sans"
         android:hint="Name"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:paddingLeft="20sp"
         android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
