--- a/app/src/main/res/layout/fragment_createnew.xml
+++ b/app/src/main/res/layout/fragment_createnew.xml
@@ -480,6 +480,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="?attr/actionModeBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etArbeitsweg" />
