--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListViewActivity"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false">
         <ListView
-            android:id="@+id/listviewid"
+            android:id="@+id/listviewidfrag"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:descendantFocusability = "blocksDescendants"
+            android:focusable="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
