--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListViewActivity"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:focusable="false">
 
     <ListView
         android:id="@+id/listviewid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusable="false"/>
 </RelativeLayout>
