--- a/app/src/main/res/layout/fahrt_list_adapter.xml
+++ b/app/src/main/res/layout/fahrt_list_adapter.xml
@@ -7,7 +7,8 @@
     android:orientation="horizontal"
     android:weightSum="100"
     android:descendantFocusability = "blocksDescendants"
-    android:focusable="false">
+    android:focusable="false"
+    android:focusableInTouchMode="false">
 
     <TextView
         android:id="@+id/tv1"
