Login/Register funktion

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,25 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/table"
             android:title="@string/menu_table" />
         <item
             android:id="@+id/nav_home"
             android:title="@string/menu_createNew" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:title="@string/menu_mycars" />
-        <item
-            android:id="@+id/nav_tools"
-            android:title="@string/menu_admin" />
 
             <item
-                android:id="@+id/nav_share"
-                android:title="@string/menu_changePW" />
-            <item
-                android:id="@+id/nav_send"
+                android:id="@+id/logout"
                 android:title="@string/menu_logout" />
-
     </group>
 
 
